--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,9 @@ name = "quantum-pixel"
 authors = [
     { name="Linos1391", email="linos.coding@gmail.com" },
 ]
-version = "1.0.0"
 description = "When both YES and NO are existed. Only human with emotions can comprehend."
-readme = "README.md"
 requires-python = ">=3.14"
+dynamic = ["readme", "version"]
 dependencies = [
     "fastapi[standard]>=0.128.0",
     "numpy>=2.4.0",
@@ -24,3 +23,27 @@ classifiers=[
 [project.urls]
 Repository = "https://github.com/Linos1391/quantum-pixel.git"
 Issues = "https://github.com/Linos1391/quantum-pixel/issues"
+
+[build-system]
+requires = ["hatchling", "hatch-fancy-pypi-readme"]
+build-backend = "hatchling.build"
+
+[tool.hatch.version]
+path = "src/__init__.py"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
+
+[tool.hatch.metadata.hooks.fancy-pypi-readme]
+content-type = "text/markdown"
+
+[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
+path = "README.md"
+end-before = "(assets/mermaid.png)"
+
+[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
+text = "(https://github.com/Linos1391/quantum-pixel/blob/master/assets/mermaid.png?raw=true)"
+
+[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
+path = "README.md"
+start-after = "assets/mermaid.png"
